<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/top_bar" >

        <Button
            android:id="@+id/buttonUserEditCancel"
            style="@style/top_button"
            android:layout_marginLeft="10dp"
            android:background="@drawable/active_button_cancel" />

        <TextView
            style="@style/top_text"
            android:text="@string/Activity1UserListEditTopEditUser" />

        <Button
            android:id="@+id/buttonUserEditSure"
            style="@style/top_button"
            android:layout_marginRight="10dp"
            android:background="@drawable/active_button_sure" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="user" />

        <LinearLayout
            android:id="@+id/zoneEditName"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Activity1UserListAddName" />

            <TextView
                android:id="@+id/textViewUserEditName"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zoneEditSex"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Activity1UserListAddGender" />

            <TextView
                android:id="@+id/textViewUserEditSex"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zoneEditAge"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Activity1UserListAddAge" />

            <TextView
                android:id="@+id/textViewUserEditAge"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zoneEditHeight"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Activity1UserListAddHeight" />

            <TextView
                android:id="@+id/textViewUserEditHeight"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zoneEditWeight"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Activity1UserListAddTargetWeight" />

            <TextView
                android:id="@+id/textViewUserEditWeight"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
